--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,34 +1,39 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1"
+    compileSdkVersion 22
+    buildToolsVersion "23.0.0 rc2"
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 19
+        applicationId "me.storm.ninegag"
+        minSdkVersion 15
+        targetSdkVersion 22
         versionCode 4
         versionName "1.3"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     buildTypes {
         release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     lintOptions {
-      abortOnError false
+        abortOnError false
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-    compile 'com.android.support:support-v4:19.1.+'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    // AndroidStaggeredGrid https://github.com/etsy/AndroidStaggeredGrid
-    compile 'com.etsy.android.grid:library:1.0.5'
-    // Shimmer-android https://github.com/RomainPiel/Shimmer-android
+    compile 'com.android.support:support-v4:22.2.0'
     compile project(':extras:ShimmerAndroid')
-    // FoldableLayout https://github.com/alexvasilkov/FoldableLayout
+    compile 'com.etsy.android.grid:library:1.0.5'
     compile 'com.alexvasilkov:foldable-layout:1.0.1'
 }
