--- a/extras/ShimmerAndroid/build.gradle
+++ b/extras/ShimmerAndroid/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'android-library'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 22
+    buildToolsVersion "23.0.0 rc2"
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 19
+        minSdkVersion 15
+        targetSdkVersion 22
     }
     lintOptions {
         abortOnError false
